--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.26.0"
+  },
+  "dependencies": {
+    "bootstrap": "4.3",
+    "jquery": "3.3.1",
+    "popper.js": "1.14.7"
   }
 }
