--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -39,3 +39,7 @@ monolog:
 
 #swiftmailer:
 #    delivery_addresses: ['me@example.com']
+
+doctrine:
+    dbal:
+        path: '%dev_database_path%'
