Add address_book_photo_directory path config

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,10 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    AppBundle\Controller\AddressBookController:
+        arguments:
+            $photoDirectory: '%address_book_photo_directory%'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
