--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    address_book_photo_directory: '%kernel.project_dir%/web/uploads/address_book/photos'
 
 framework:
     #esi: ~
