--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "sensio/generator-bundle": "^3.0",
+        "squizlabs/php_codesniffer": "^3.4",
         "symfony/phpunit-bridge": "^4.2"
     },
     "scripts": {
